Moved music logos into service template

--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -20,4 +20,5 @@
   <div data-dojo-attach-point="_progressSeekBar"></div>
 	<div data-dojo-attach-point="_trackSearchView"></div>
   <div data-dojo-attach-point="_trackPlaylistView"></div>
+  <img src="/img/logos.png" class="logos"/>
 </div>
