--- a/css/musicPlayer.css
+++ b/css/musicPlayer.css
@@ -8,9 +8,21 @@ body{
 	width:100%;
 }
 
+#serviceViewHolder{
+	background: url(/img/serviceView-background.png) repeat-x top center;
+	width:100%;
+	float:left;
+	min-height:188px;
+	padding-top:10px;
+}
+
 #serviceMenuView{
 	width:100%;
  	text-align: center;
+ 	background: url(/img/menu-background.png) repeat; 	
+ 	border-bottom: solid 2px #000;
+ 	padding:5px 0;
+ 	display: none;
 }
 
 #serviceView{
