--- a/css/musicPlayerMobile.css
+++ b/css/musicPlayerMobile.css
@@ -6,9 +6,22 @@ body{
 	font-weight: 0;
 	color:#FFF;
 }
+
+#serviceViewHolder{
+	background: url(/img/serviceView-background.png) repeat-x top center;
+	width:100%;
+	float:left;
+	min-height:188px;
+	padding-top:10px;
+}
+
 #serviceMenuView{
 	width:100%;
  	text-align: center;
+ 	background: url(/img/menu-background.png) repeat; 	
+ 	border-bottom: solid 2px #000;
+ 	padding:5px 0;
+ 	display: none;
 }
 
 .inputSearch{
