--- a/js/bpi/rf/templates/serviceView.html
+++ b/js/bpi/rf/templates/serviceView.html
@@ -1,3 +1,3 @@
 <div>
-  <div data-dojo-attach-point="_serviceView"></div>
+  <div data-dojo-attach-point="_serviceView" class="rfControlList"></div>
 </div>
