Added live update via polling of current system usage to settings

--- a/js/bpi/settings/templates/serviceView.html
+++ b/js/bpi/settings/templates/serviceView.html
@@ -1,3 +1,6 @@
 <div>
-  <div data-dojo-attach-point="_serviceView" class="settingsList"></div>
+  <div data-dojo-attach-point="_serviceView" class="settingsList">
+  	<div data-dojo-attach-point="_serviceViewCurrent"></div>
+  	<div data-dojo-attach-point="_serviceViewInfo"></div>
+  </div>
 </div>
