Removed unrequired line

--- a/js/bpi/settings/templates/serviceView.html
+++ b/js/bpi/settings/templates/serviceView.html
@@ -2,5 +2,6 @@
   <div data-dojo-attach-point="_serviceView" class="settingsList">
   	<div data-dojo-attach-point="_serviceViewCurrent"></div>
   	<div data-dojo-attach-point="_serviceViewInfo"></div>
+  	<div data-dojo-attach-point="_serviceViewControls"></div>
   </div>
 </div>
