--- a/js/bpi/music/templates/playlist.html
+++ b/js/bpi/music/templates/playlist.html
@@ -1,4 +1,8 @@
 <div>
+  <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Stored</button>
+  <button data-dojo-attach-point="_btnShuffle" data-dojo-type="dijit/form/Button" type="button" >Shuffle</button>
+  <button data-dojo-attach-point="_btnRepeat" data-dojo-type="dijit/form/Button" type="button" >Repeat</button>
+  <div data-dojo-attach-point="slideInHolder" style="display: none" class="slideInHolder"></div>
   <div data-dojo-attach-point="playlistStored" class="playlistStored"></div>
   <div data-dojo-attach-point="playlistCurrent"></div>
 </div>
