Added more natural placing for playlist, still basic and needs tidied

--- a/css/musicPlayer.css
+++ b/css/musicPlayer.css
@@ -168,7 +168,7 @@ body{
 	height:100%;
 	left:0px;
 	padding-top:54px;
-	width: 320px;
+	width: 21%;
 	position: fixed;
 	background: rgba(0,0,0,0.7);
 	z-index: 50;
