--- a/css/musicPlayer.css
+++ b/css/musicPlayer.css
@@ -174,3 +174,19 @@ body{
 	z-index: 50;
 	text-align: center;
 }
+
+.PlayingControlHolder {
+	position: fixed;
+	bottom: 0;
+	left:0;
+	width: 100%;
+	height: 44px;
+ 	background: url(/img/menu-background.png) repeat; 
+	z-index: 60;
+}
+
+.PlayingControl {
+	width: 700px;
+	margin:0 auto;
+}
+
