--- a/js/bpi/music/templates/playlist.html
+++ b/js/bpi/music/templates/playlist.html
@@ -1,7 +1,7 @@
 <div>
   <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Stored</button>
   <button data-dojo-attach-point="_btnShuffle" data-dojo-type="dijit/form/Button" type="button" >Shuffle</button>
-  <button data-dojo-attach-point="_btnRepeat" data-dojo-type="dijit/form/Button" type="button" >Repeat</button>
+  <button data-dojo-attach-point="_btnClear" data-dojo-type="dijit/form/Button" type="button" >Clear</button>
   <div data-dojo-attach-point="slideInEnder" style="display: none" class="slideInEnder"></div>
   <div data-dojo-attach-point="slideInHolder" style="display: none" class="slideInHolder"></div>
   <div data-dojo-attach-point="playlistStored" class="playlistStored"></div>
