--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -4,12 +4,10 @@
     <br />
     <span data-dojo-attach-point="_currentlyPlayingTime"></span>
   </div>
-  <div style="clear:both"></div>
-  <div class="controlButtons">
-    <button data-dojo-attach-point="_btnPlaylist" data-dojo-type="dijit/form/Button" type="button" >Playlist</button>
-    <button data-dojo-attach-point="_btnSettings" data-dojo-type="dijit/form/Button" type="button" >Settings</button>
-  </div>
-
+  <div class="clear"></div>
+  <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Stored</button>
+  <button data-dojo-attach-point="_btnShuffle" data-dojo-type="dijit/form/Button" type="button" >Shuffle</button>
+  <button data-dojo-attach-point="_btnClear" data-dojo-type="dijit/form/Button" type="button" >Clear</button>
 	<div data-dojo-attach-point="_trackSearchView"></div>
   <div data-dojo-attach-point="_trackPlaylistView"></div>
   <div data-dojo-attach-point="_playingControlHolder"></div>
