Moved shuffle button into PlayingControl

--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -5,8 +5,7 @@
     <span data-dojo-attach-point="_currentlyPlayingTime"></span>
   </div>
   <div class="clear"></div>
-  <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Stored</button>
-  <button data-dojo-attach-point="_btnShuffle" data-dojo-type="dijit/form/Button" type="button" >Shuffle</button>
+  <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Playlists</button>
 	<div data-dojo-attach-point="_trackSearchView"></div>
   <div data-dojo-attach-point="_trackPlaylistView"></div>
   <div data-dojo-attach-point="_playingControlHolder"></div>
