Playlist now outputs tracks to passed in node

--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -7,6 +7,6 @@
   <div class="clear"></div>
   <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Playlists</button>
 	<div data-dojo-attach-point="_trackSearchView"></div>
-  <div data-dojo-attach-point="_trackPlaylistView"></div>
+  <div data-dojo-attach-point="_trackListHolder"></div>
   <div data-dojo-attach-point="_playingControlHolder"></div>
 </div>
