--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -5,8 +5,8 @@
     <span data-dojo-attach-point="_currentlyPlayingTime"></span>
   </div>
   <div class="clear"></div>
-  <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" >Playlists</button>
-	<div data-dojo-attach-point="_trackSearchView"></div>
+  <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" style="float:left;">Playlists</button>
+	<div data-dojo-attach-point="_trackSearchView" style="float:left"></div>
   <div data-dojo-attach-point="_trackListHolder"></div>
   <div data-dojo-attach-point="_playingControlHolder"></div>
 </div>
