--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -7,6 +7,7 @@
   <div class="clear"></div>
   <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" style="float:left;">Playlists</button>
 	<div data-dojo-attach-point="_trackSearchView" style="float:left"></div>
+  <div class="clear"></div>
   <span data-dojo-attach-point="_trackListHolderInfo" class="searchSummary"></span>
   <div data-dojo-attach-point="_trackListHolder"></div>
   <div data-dojo-attach-point="_playingControlHolder"></div>
