--- a/css/musicPlayerMobile.css
+++ b/css/musicPlayerMobile.css
@@ -90,6 +90,11 @@ display: none
   background: url(/img/background.jpg) repeat;
 }
 
+.claro .dijitSlider .dijitSliderProgressBarH, .claro .dijitSlider .dijitSliderLeftBumper,
+.claro .dijitSliderDisabled .dijitSliderProgressBarH, .claro .dijitSliderDisabled .dijitSliderLeftBumper{
+  background: #28292C
+}
+
 
 /* --------------- */
 /* --------------- */
