--- a/css/musicPlayerMobile.css
+++ b/css/musicPlayerMobile.css
@@ -153,7 +153,21 @@ display: none
   margin: 10px auto 0;
   text-align: center;
   border-bottom:solid 2px #37373C;
+  position: relative;
+  height: 40px;
+  font-size: 15px
+ -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .75);
+  -moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .75);
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .75);
 }
+
+.currentlyPlayingInfo {
+  position: relative;
+  z-index: 30;
+  text-shadow: 0px 1px rgba(0, 0, 0, .75);
+}
+
+
 .controlButtons{
   text-align: center;
 }
@@ -189,31 +203,61 @@ display: none
   width: 700px
 }
 
+.spotifyButton{
+  position: absolute;
+  left: 0;
+  top: 1px;
+  background: #006699;
+  height: 58px;
+  width: 100px;
+  background: url(/img/music-images/spotify.png) center right;
+  background-size: 200px 200px;
+  opacity: 0.4;
+}
+
+.pandoraButton{
+  position: absolute;
+  right: 0;
+  top: 1px;
+  background: url(/img/music-images/pandora.png) center left;
+  background-size: 150px 150px;
+  height: 58px;
+  width: 100px;
+  opacity: 0.4;
+  z-index: 20;  
+}
+
+
 .iconPlay{
-  background: url(/img/music-images/Play.png);
+  background: url(/img/music-images/Play.png) center center no-repeat;
+  background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconPause{
-  background: url(/img/music-images/Pause.png);
+  background: url(/img/music-images/Pause.png) center center no-repeat;
+  background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconPrev{
-  background: url(/img/music-images/Skip-back.png);
+  background: url(/img/music-images/Skip-back.png) center center no-repeat;
+  background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconNext{
-  background: url(/img/music-images/Skip-ahead.png);
+  background: url(/img/music-images/Skip-ahead.png) center center no-repeat;
+  background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 .iconShuffle{
-  background: url(/img/music-images/random-shuffle.png);
+  background: url(/img/music-images/random-shuffle.png) center center no-repeat;
+  background-size: 14px 14px;
   height: 20px;
   width: 20px;
 }
