--- a/css/musicPlayer.css
+++ b/css/musicPlayer.css
@@ -174,6 +174,7 @@ body {
 .currentlyPlayingInfo {
   position: relative;
   z-index: 30;
+  pointer-events:none;
 }
 
 .noSongs{
@@ -204,7 +205,7 @@ body {
   background-size:200px 200px;
   height: 71px;
   width: 100px;
-  opacity: 0.4;
+  opacity: 0.2;
   z-index: 20;
 }
 
@@ -216,8 +217,13 @@ body {
   background-size: 150px 150px;
   height: 71px;
   width: 100px;
-  opacity: 0.4;
+  opacity: 0.2;
   z-index: 20;  
+}
+
+#pandoraArt {
+  display: block;
+  margin: 0 auto;
 }
 
 .iconPlay{
