--- a/css/musicPlayerMobile.css
+++ b/css/musicPlayerMobile.css
@@ -164,9 +164,14 @@ display: none
 .currentlyPlayingInfo {
   position: relative;
   z-index: 30;
-  text-shadow: 0px 1px rgba(0, 0, 0, .75);
+  text-shadow: 0px 2px rgba(0, 0, 0, .75);
+  pointer-events:none;
+  font-size:15px;
 }
 
+.playingTime{
+  font-size:12px;
+}
 
 .controlButtons{
   text-align: center;
@@ -212,7 +217,7 @@ display: none
   width: 100px;
   background: url(/img/music-images/spotify.png) center right;
   background-size: 200px 200px;
-  opacity: 0.4;
+  opacity: 0.2;
 }
 
 .pandoraButton{
@@ -223,8 +228,15 @@ display: none
   background-size: 150px 150px;
   height: 58px;
   width: 100px;
-  opacity: 0.4;
+  opacity: 0.2;
   z-index: 20;  
+}
+
+#pandoraArt {
+  display: block;
+  margin: 0 auto;
+  height: 250px;
+  width: 250px;
 }
 
 
