Added pandora art displaying and better switching between audio players

--- a/js/bpi/music/templates/serviceView.html
+++ b/js/bpi/music/templates/serviceView.html
@@ -4,7 +4,7 @@
     <div data-dojo-attach-point="_pandoraButton" class="pandoraButton"></div>
     <span data-dojo-attach-point="_currentlyPlaying" class="currentlyPlayingInfo"></span>
     <br />
-    <span data-dojo-attach-point="_currentlyPlayingTime" class="currentlyPlayingInfo"></span>
+    <span data-dojo-attach-point="_currentlyPlayingTime" class="currentlyPlayingInfo playingTime"></span>
   </div>
   <div class="clear"></div>
   <button data-dojo-attach-point="_btnStored" data-dojo-type="dijit/form/Button" type="button" style="float:left;">Playlists</button>
