--- a/css/musicPlayer.css
+++ b/css/musicPlayer.css
@@ -88,7 +88,7 @@ body {
 /* Audio Player */
 /* ------------ */
 
-.inputSearch {
+.inputExplore {
   margin: 0 0 0 8px;
   padding: 0;
   width: 622px;
