--- a/js/bpi/temperature/templates/serviceView.html
+++ b/js/bpi/temperature/templates/serviceView.html
@@ -1,3 +1,4 @@
 <div>
-  <div data-dojo-attach-point="_serviceView" class="tempInfo"></div>
+ 	<div data-dojo-attach-point="_serviceView" class="tempInfo"></div>
+	<div id="stacked" style="width: 400px; height: 240px; margin: 10px auto 0px auto;"></div>
 </div>
