Finished rough version with day selector and timed axis, code needs tidied

--- a/js/bpi/temperature/templates/serviceView.html
+++ b/js/bpi/temperature/templates/serviceView.html
@@ -1,4 +1,5 @@
 <div>
  	<div data-dojo-attach-point="_serviceView" class="tempInfo"></div>
-	<div id="stacked" style="width: 400px; height: 240px; margin: 10px auto 0px auto;"></div>
+ 	<div data-dojo-attach-point="_daySelectHolder" style="color: #000"></div>
+	<div data-dojo-attach-point="_graphHolder" id="stacked" style="width: 100%; height: 240px;"></div>
 </div>
