--- a/css/musicPlayerMobile.css
+++ b/css/musicPlayerMobile.css
@@ -6,7 +6,7 @@
 /* -------- */
 
 body {
-  background: url(/img/background.jpg) repeat;  
+  background: url(../img/background.jpg) repeat;  
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +20,7 @@ table {
 }
 
 #serviceViewHolder {
-  background: url(/img/serviceView-background.png) repeat-x top center;
+  background: url(../img/serviceView-background.png) repeat-x top center;
   width: 100%;
   float: left;
   min-height: 188px;
@@ -31,7 +31,7 @@ table {
 #serviceMenuView {
   width: 100%;
   text-align: center;
-  background: url(/img/menu-background.png) repeat; 	
+  background: url(../img/menu-background.png) repeat; 	
   border-bottom: solid 2px #000;
   height: 34px;
   display: none;
@@ -87,7 +87,7 @@ display: none
 }
 
 .claro .dijitDialogPaneContent {
-  background: url(/img/background.jpg) repeat;
+  background: url(../img/background.jpg) repeat;
 }
 
 .claro .dijitSlider .dijitSliderProgressBarH, .claro .dijitSlider .dijitSliderLeftBumper,
@@ -147,7 +147,7 @@ display: none
 }
 
 .currentlyPlaying{
-  background: url(/img/playing-background.png) repeat-x;
+  background: url(../img/playing-background.png) repeat-x;
   padding: 10px 0;
   display: block;
   margin: 10px auto 0;
@@ -195,7 +195,7 @@ display: none
 }
 
 .PlayingControlHolder {
-  background: url(/img/menu-background.png) repeat;
+  background: url(../img/menu-background.png) repeat;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -215,7 +215,7 @@ display: none
   background: #006699;
   height: 58px;
   width: 100px;
-  background: url(/img/music-images/spotify.png) center right;
+  background: url(../img/music-images/spotify.png) center right;
   background-size: 200px 200px;
   opacity: 0.2;
 }
@@ -224,7 +224,7 @@ display: none
   position: absolute;
   right: 0;
   top: 1px;
-  background: url(/img/music-images/pandora.png) center left;
+  background: url(../img/music-images/pandora.png) center left;
   background-size: 150px 150px;
   height: 58px;
   width: 100px;
@@ -241,49 +241,49 @@ display: none
 
 
 .iconPlay{
-  background: url(/img/music-images/Play.png) center center no-repeat;
+  background: url(../img/music-images/Play.png) center center no-repeat;
   background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconPause{
-  background: url(/img/music-images/Pause.png) center center no-repeat;
+  background: url(../img/music-images/Pause.png) center center no-repeat;
   background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconPrev{
-  background: url(/img/music-images/Skip-back.png) center center no-repeat;
+  background: url(../img/music-images/Skip-back.png) center center no-repeat;
   background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconNext{
-  background: url(/img/music-images/Skip-ahead.png) center center no-repeat;
+  background: url(../img/music-images/Skip-ahead.png) center center no-repeat;
   background-size: 10px 10px;
   height: 20px;
   width: 20px;
 }
 
 .iconShuffle{
-  background: url(/img/music-images/random-shuffle.png) center center no-repeat;
+  background: url(../img/music-images/random-shuffle.png) center center no-repeat;
   background-size: 14px 14px;
   height: 20px;
   width: 20px;
 }
 
 .iconLike{
-  background: url(/img/music-images/black-like.png) center center no-repeat;
+  background: url(../img/music-images/black-like.png) center center no-repeat;
   background-size: 16px 16px;
   height: 20px;
   width: 20px;
 }
 
 .iconDislike{
-  background: url(/img/music-images/black-like.png) center center no-repeat;
+  background: url(../img/music-images/black-like.png) center center no-repeat;
   background-size: 16px 16px;
   height: 20px;
   width: 20px;
